PEH-7596 title overlapping desc fix

--- a/force-app/main/community-pages-pp_2/resources/lwc/ppDiscoverLinks/ppDiscoverLinks.css
+++ b/force-app/main/community-pages-pp_2/resources/lwc/ppDiscoverLinks/ppDiscoverLinks.css
@@ -9,7 +9,6 @@
 }
 
 .links-header {
-    height: 19px;
     color: #015FF1;
     font-family: "Proxima Nova";
     font-size: 16px;
@@ -17,6 +16,7 @@
     letter-spacing: 0;
     line-height: 19px;
     margin-bottom: 6px;
+    padding-right: 5px;
 }
 
 .links-desc {
@@ -81,7 +81,6 @@
 
 .center-empty{
     text-align: center;
-    margin-top: 25%;
 }
 
 .container-height{
@@ -113,4 +112,8 @@
     border-radius: 10px;
     background: #999999;
     padding-right: 10px;
+  }
+
+  .height{
+      height: 100%;
   }
